# rust_physics_engine

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  requirements.txt
crates/cfd_solver/: Cargo.toml
crates/cfd_solver/src/: energy.rs
crates/engine/: Cargo.toml
crates/engine/src/objects/: mod.rs  physical_object.rs
crates/molecular_dynamics/: Cargo.toml
crates/molecular_dynamics/src/: lib.rs
crates/molecular_dynamics/src/handler/: mod.rs
crates/molecular_dynamics/src/objects/: physical_object.rs  point_mass.rs
crates/molecular_dynamics/src/physics/: cluster.rs  mod.rs  potential.rs
crates/molecular_dynamics/src/point_mass/: cluster.rs  mod.rs
crates/physics_core/: Cargo.toml
crates/visualization/: Cargo.toml
crates/visualization/src/simulation/: config.rs  screen.rs  units.rs
docs/: point.md  vector.md
docs/md/: cluster.md  physical_object.md  point_mass.md  vector.md
examples/: argon.rs  argon_large.rs  earth_moon.rs  heated_rod.rs
src/: lib.rs  main.rs
src/objects/: mod.rs  physical_object.rs  point.rs  point_mass.rs  vector.rs
src/physics/: cluster.rs  mod.rs  potential.rs  time_integration.rs  units.rs  vector.rs
src/simulation/: config.rs  mod.rs  screen.rs  units.rs
